# allegro-hello-world

./: .gitignore  Makefile  README.md
a4/: CMakeLists.txt  main-tty.cpp  main-win.cpp
a4-hello/: CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.musl  Makefile  main-tty.cpp  main-win.cpp  main.cpp
a5/: main-tty.cpp  main-win.cpp
a5-hello/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.musl  Makefile  main-tty.cpp  main.cpp
